fixed spacing layout

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,7 +83,7 @@ a.brand-logo.active {
 }
 
 #emptySpace {
-    height: 30px;
+    height: 70px;
 }
 
 
